# benten-engine

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  SPIKE-phase-1-stack-RESULTS.md  bench_thresholds.toml  clippy.toml  deny.toml  host-functions.toml  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml
bindings/napi/: .gitignore  Cargo.toml  INTERNALS.md  build.rs  index.test.ts  package.json
bindings/napi/src/: atrium.rs  browser_blob_store.rs  browser_indexeddb.rs  devserver.rs  edge.rs  error.rs  error_envelope.rs  identity.rs  json_build.rs  lib.rs  node.rs  policy.rs  sandbox.rs  stream.rs  subgraph.rs  subscribe.rs  trace.rs  view.rs  wait.rs  wasm_browser.rs  wasm_target.rs
bindings/napi/test/: atrium_asynctask_concurrency.test.ts  budget_exhausted_napi_round_trip.test.ts  sandbox_napi_bridge.test.ts  stream_handle_next_cancellation_contract.test.ts  stream_napi_async_iterator_back_pressure.test.ts  tf12_js_public_api_parity_gate_freeze.test.ts
bindings/napi/tests/: atrium_join_production_mode_1187.rs  attribution_frame_widening_napi_serializer.rs  benten_error_context.rs  browser_blob_backend.rs  browser_manifest_store.rs  cap_delegate_napi_layer3_shares_enforcement_1018_closure_pin.rs  cap_delegate_napi_resolved_scope_regression_guard.rs  cap_device_did_revocation_resolved_scope_regression_guard.rs  cap_grant_class_of_bug_audit_regression_guard.rs  cap_revoke_napi_passes_resolved_scope_not_cid_regression_guard.rs  cross_browser_determinism_workflow_pins.rs  describe_sandbox.rs  device_attestation.rs  device_attestation_napi.rs  emit_event.rs  engine_b_erasure_boundary.rs  feature_graph_closure_no_test_helpers_in_production.rs  identity_keypair.rs  indexeddb_schema.rs  input_validation.rs  install_module_signed_napi_cdylib_enforcement_1205_closure_pin.rs  native_default.rs  register_module_bytes.rs  register_user_view_view_label_mismatch_post_g15_a.rs  stream_requires_close.rs  wait_clock.rs  wasm32_unknown_unknown_browser_engine_loads.rs  wasm32_unknown_unknown_bundle_size_under_threshold.rs  wasm32_unknown_unknown_module_manifest_in_memory_only_no_indexeddb_persistence.rs  wasm_bundle_content.rs  wasm_bundle_size.rs
crates/benten-caps/: Cargo.toml  INTERNALS.md
crates/benten-caps/benches/: wallclock_toctou_refresh.rs
crates/benten-caps/src/: attenuation.rs  chain_authority.rs  error.rs  grant.rs  grant_backed.rs  lib.rs  manifest_envelope_chain_validation.rs  manifest_scope.rs  noauth.rs  plugin_delegation.rs  policy.rs  rate_limit.rs  typed_cap_mapping.rs  ucan_grounded.rs  ucan_stub.rs
crates/benten-caps/tests/: call_attenuation.rs  cap_error_display_hygiene.rs  cap_r1_1_audience_binding_grep_defense.rs  capability_grant.rs  check_write_called_at_commit.rs  collapse_f3_durable_replay_marker_closure_pin.rs  collapse_p2_consolidate_chain_authority.rs  collapse_p4_1230_605_707_single_revocation_seam.rs  collapse_p5_unified_ceiling.rs  device_dispatch.rs  error_code_mapping.rs  g_core_8_private_namespace_cross_plugin_substantive_arm_4_28.rs  grant_backed_policy.rs  grant_backed_policy_cap_policy_denies_plugin_delegated_write_outside_manifest_envelope.rs  grant_backed_policy_cap_policy_fires_on_plugin_delegated_write_within_manifest_envelope.rs  grant_backed_policy_check_read_denies_when_actor_cid_lacks_cap.rs  grant_backed_policy_derives_scope_from_write_context.rs  grant_backed_policy_existing_store_label_write_paths_unchanged.rs  grant_backed_policy_manifest_aware_scope_derivation_round_trip.rs  grant_backed_policy_non_crud_scope_round_trip.rs  grant_backed_wildcard_pushdown_seam_1141.rs  grant_reader_batch.rs  grant_reader_max_chain_depth.rs  grant_scope_lone_star.rs  grant_ttl_hlc_duration.rs  grant_uniqueness_on_cid.rs  manifest_aware_scope_install_time_vs_check_time_consistency.rs  manifest_envelope_chain_validation_outside_envelope_denied.rs  manifest_envelope_chain_validation_requires_user_root.rs  manifest_envelope_chain_validation_within_envelope_admitted.rs  noauth.rs  noauth_proptest.rs  noauth_still_permits_everything.rs  policy_trait.rs  private_namespace_cross_plugin_delegation_denied.rs  private_namespace_scope_admits_only_plugin_did_actor.rs  private_namespace_scope_prefix_canonicalization.rs  prop_ucan_window.rs  proptest_attenuation.proptest-regressions  proptest_attenuation.rs  (+11 more)
crates/benten-core/: Cargo.toml  INTERNALS.md
crates/benten-core/benches/: cid_parse.rs  (+1 more)
crates/benten-crypto-suite/: Cargo.toml
crates/benten-dsl-compiler/: Cargo.toml  INTERNALS.md
crates/benten-engine/: Cargo.toml  INTERNALS.md
crates/benten-errors/: Cargo.toml  INTERNALS.md
crates/benten-eval/: Cargo.toml  INTERNALS.md  build.rs
crates/benten-graph/: Cargo.toml  INTERNALS.md
crates/benten-id/: Cargo.toml  INTERNALS.md
crates/benten-ivm/: Cargo.toml  INTERNALS.md
crates/benten-platform-foundation/: Cargo.toml  INTERNALS.md
crates/benten-renderer-tauri/: Cargo.toml  INTERNALS.md
crates/benten-sync/: Cargo.toml  INTERNALS.md
tests/doc_completeness/: Cargo.toml  host_functions_doc.rs  invariant_coverage_doc.rs  phase_2a_catalog_coverage.rs  quickstart_diagnosing_denied_reads.rs
tests/integration/: Cargo.toml  atrium_browser_thin_client.rs  atrium_three_peer.rs  atrium_two_device.rs  atrium_two_peer.rs  atrium_two_process.rs
tests/integration_browser_thin_client/: Cargo.toml  atrium_browser_thin_client_g18_a_indexeddb.rs
tests/phase_3_workspace/: Cargo.toml  architecture_md_g20b_final.rs  architecture_md_state.rs  atrium_three_peer.rs  atrium_two_device.rs  atrium_two_peer.rs  atrium_two_process.rs  cargo_vet_policy_phase_3.rs  doc_drift_invariant_coverage.rs  doc_drift_security_posture.rs  missing_docs_workspace.rs  paper_prototype_revalidation.rs  security_posture_compromises.rs  security_posture_phase_3_close.rs  thin_client_protocol.rs
tools/bench-wat-rebake/: Cargo.toml
tools/benten-admin-shell/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
tools/benten-dev/: Cargo.toml
tools/cite-drift-detector/: Cargo.toml
(+1310 files in other folders)
