[workspace]
resolver = "3"

members = [
    "crates/benten-core",     # Node, Edge, Value, content hashing, version chains
    "crates/benten-graph",    # Storage (KVBackend trait + redb impl), indexes, MVCC
    "crates/benten-ivm",      # IVM (Algorithm B) — subscribes to graph changes (STUB)
    "crates/benten-caps",     # Capability types + pre-write hook + NoAuthBackend default (STUB)
    "crates/benten-eval",     # 12 primitives, evaluator, transaction primitive, SANDBOX host (STUB)
    "crates/benten-engine",   # Orchestrator: public API
    "bindings/napi",          # napi-rs v3 bindings (native + WASM)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["BentenAI"]
repository = "https://github.com/BentenAI/benten-engine"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
# Start strict and relax only where justified.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Relaxed defaults:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# Core engine
blake3 = { version = "1.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = "1"
serde_ipld_dagcbor = "0.6.4"
multihash = "0.19"
redb = "4"

# Concurrency & allocator
papaya = "0.2"
mimalloc = { version = "0.1", default-features = false }

# Error handling & observability
thiserror = "2"
tracing = "0.1"

# WASM sandbox (SANDBOX primitive)
wasmtime = "35"

# Dev
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"
tempfile = "3"

# Bindings (napi-rs v3 handles native + WASM)
napi = { version = "3", default-features = false }
napi-derive = "3"

# Phase 3 (sync/identity) — reserved versions for future use:
# iroh = "0.97"
# loro = "1"
# ed25519-dalek = "2"
# uhlc = "0.2"

# Dependency workaround: the `core2` 0.4.0 crate was archived upstream on
# 2026-04-14 ("No longer supported. Use core directly.") and yanked from
# crates.io. It is pulled in transitively via two chains:
#   1. cid -> ipld-core -> serde_ipld_dagcbor  (direct in our hash path)
#   2. multihash + multihash-derive             (via cid's feature wiring)
#
# We resolve chain 1 by patching `cid` to our fork, which replaces the core2
# dependency with `no_std_io2` (same approach as multiformats/rust-multihash#407,
# pending upstream review in multiformats/rust-cid).
#
# We resolve chain 2 temporarily by patching `core2` to the technocreatives
# community fork at a pinned commit. This entry can be removed once
# multiformats/rust-multihash#407 merges and a release is cut, which will
# propagate a core2-free multihash through to the ipld-core / serde_ipld_dagcbor
# chain as well.
#
# See SPIKE-phase-1-stack-RESULTS.md "Surprises" #1 and "Next Actions" #1.
[patch.crates-io]
cid = { git = "https://github.com/BentenAI/rust-cid", rev = "e11cf45399c951597725a9bc3ed49c805f7aa640" }
core2 = { git = "https://github.com/technocreatives/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 2
