[workspace]
resolver = "3"

members = [
    "crates/benten-core",     # Node, Edge, Value, content hashing, version chains
    "crates/benten-graph",    # Storage (KVBackend trait + redb impl), indexes, MVCC
    "crates/benten-ivm",      # IVM (Algorithm B) — subscribes to graph changes (STUB)
    "crates/benten-caps",     # Capability types + pre-write hook + NoAuthBackend default (STUB)
    "crates/benten-eval",     # 12 primitives, evaluator, transaction primitive, SANDBOX host (STUB)
    "crates/benten-engine",   # Orchestrator: public API
    "bindings/napi",          # napi-rs v3 bindings (native + WASM)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["BentenAI"]
repository = "https://github.com/BentenAI/benten-engine"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "allow"
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"
non_snake_case = "allow"

[workspace.lints.clippy]
# Start strict and relax only where justified.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `todo` is the load-bearing R3-stub pattern; lib stubs use `todo!()`. The
# real R5 implementation removes them. Workspace-wide allow so `-D warnings`
# at clippy time stays clean during the red phase.
todo = "allow"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "allow"
expect_used = "allow"

# Relaxed defaults:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# Test-only pedantic relaxations — R3 test files and stubs trip these
# liberally. R5 cleanup pass tightens them again as the code firms up.
similar_names = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
should_implement_trait = "allow"
items_after_statements = "allow"
unused_self = "allow"
new_without_default = "allow"
unnecessary_wraps = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
match_same_arms = "allow"
single_match_else = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
default_trait_access = "allow"
ignored_unit_patterns = "allow"
used_underscore_binding = "allow"
trivially_copy_pass_by_ref = "allow"
needless_lifetimes = "allow"
ref_option = "allow"
collapsible_match = "allow"
useless_let_if_seq = "allow"
unnecessary_semicolon = "allow"
single_match = "allow"
or_fun_call = "allow"
manual_assert = "allow"
unreadable_literal = "allow"
approx_constant = "allow"
type_complexity = "allow"
needless_collect = "allow"
unnecessary_unwrap = "allow"
let_underscore_must_use = "allow"
mut_mut = "allow"
inefficient_to_string = "allow"
useless_vec = "allow"
shadow_unrelated = "allow"
manual_map = "allow"
ptr_arg = "allow"
manual_string_new = "allow"
range_plus_one = "allow"
needless_borrow = "allow"
explicit_iter_loop = "allow"
ref_as_ptr = "allow"
must_use_unit = "allow"
empty_line_after_doc_comments = "allow"
literal_string_with_formatting_args = "allow"
manual_is_variant_and = "allow"
collapsible_if = "allow"
needless_borrows_for_generic_args = "allow"
useless_format = "allow"
single_char_pattern = "allow"
inconsistent_struct_constructor = "allow"
match_bool = "allow"
no_effect_underscore_binding = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
empty_enum_variants_with_brackets = "allow"
needless_question_mark = "allow"
collapsible_else_if = "allow"
elidable_lifetime_names = "allow"
derivable_impls = "allow"
manual_pattern_char_comparison = "allow"
needless_pass_by_ref_mut = "allow"
suspicious_arithmetic_impl = "allow"
multiple_inherent_impl = "allow"
struct_field_names = "allow"
implicit_clone = "allow"
cast_possible_wrap = "allow"
unnecessary_lazy_evaluations = "allow"
extra_unused_lifetimes = "allow"
unnecessary_literal_bound = "allow"
manual_range_contains = "allow"
byte_char_slices = "allow"
field_reassign_with_default = "allow"
doc_link_with_quotes = "allow"
uninlined_format_args = "allow"
unneeded_struct_pattern = "allow"

[workspace.dependencies]
# Core engine
blake3 = { version = "1.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = "1"
serde_ipld_dagcbor = "0.6.4"
multihash = "0.19"
redb = "4"

# Concurrency & allocator
papaya = "0.2"
mimalloc = { version = "0.1", default-features = false }

# Error handling & observability
thiserror = "2"
tracing = "0.1"

# Lightweight no_std spinlock + lazy-init primitive. benten-core uses this to
# serialize access to the process-wide version-chain anchor tables (Phase 1
# in-process only; Phase 3 replaces with CRDT merge). Chosen over `once_cell`
# because `spin` needs no feature flags for no_std+alloc.
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }

# WASM sandbox (SANDBOX primitive)
wasmtime = "35"

# Dev
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"
tempfile = "3"

# Bindings (napi-rs v3 handles native + WASM)
napi = { version = "3", default-features = false }
napi-derive = "3"

# HLC time source — pulled forward to Phase 1 per R2 gap #2 resolution.
# `crud('post')` zero-config path injects a deterministic `createdAt` timestamp
# on WRITE, and `createdAt` enters the Node content-hash input. A plain
# wall-clock source would break D2 cross-process determinism and force a
# per-Anchor counter hack for Phase 1 that gets thrown away at Phase 3. One
# HLC implementation for all phases is cleaner.
uhlc = "0.2"

# Phase 3 (sync/identity) — reserved versions for future use:
# iroh = "0.97"
# loro = "1"
# ed25519-dalek = "2"

# Dependency workaround: the `core2` 0.4.0 crate was archived upstream on
# 2026-04-14 ("No longer supported. Use core directly.") and yanked from
# crates.io. It is pulled in transitively via two chains:
#   1. cid -> ipld-core -> serde_ipld_dagcbor  (direct in our hash path)
#   2. multihash + multihash-derive             (via cid's feature wiring)
#
# We resolve chain 1 by patching `cid` to our fork, which replaces the core2
# dependency with `no_std_io2` (same approach as multiformats/rust-multihash#407,
# pending upstream review in multiformats/rust-cid).
#
# We resolve chain 2 temporarily by patching `core2` to the technocreatives
# community fork at a pinned commit. This entry can be removed once
# multiformats/rust-multihash#407 merges and a release is cut, which will
# propagate a core2-free multihash through to the ipld-core / serde_ipld_dagcbor
# chain as well.
#
# See SPIKE-phase-1-stack-RESULTS.md "Surprises" #1 and "Next Actions" #1.
[patch.crates-io]
cid = { git = "https://github.com/BentenAI/rust-cid", rev = "e11cf45399c951597725a9bc3ed49c805f7aa640" }
core2 = { git = "https://github.com/technocreatives/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 2
