[workspace]
resolver = "3"

members = [
    "crates/benten-errors",   # Stable error-catalog discriminants (ErrorCode enum); root crate, zero workspace deps
    "crates/benten-core",     # Node, Edge, Value, content hashing, version chains
    "crates/benten-graph",    # Storage (KVBackend trait + redb impl), indexes, MVCC
    "crates/benten-ivm",      # IVM (Algorithm B) — subscribes to graph changes (STUB)
    "crates/benten-caps",     # Capability types + pre-write hook + NoAuthBackend default (STUB)
    "crates/benten-eval",     # 12 primitives, evaluator, transaction primitive, SANDBOX host (STUB)
    "crates/benten-engine",   # Orchestrator: public API
    "crates/benten-dsl-compiler", # Phase-2b G12-B: DSL-text → SubgraphSpec compiler (MINIMAL-FOR-DEVSERVER ~200-300 LOC, 4 public items). Sibling-of-engine; depends on benten-core only.
    "bindings/napi",          # napi-rs v3 bindings (native + WASM)
    "tests/doc_completeness", # Phase-2a R3 qa-expert — docs-vs-code audit tests (local only until R5 G11-A)
    "tools/benten-dev",       # Phase-2a G11-A dev-server stub (hot-reload, inspect-state) — local only until R5 G11-A
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["BentenAI"]
repository = "https://github.com/BentenAI/benten-engine"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
# R6b bp-23: five workspace allows audited.
#
# `unused_must_use` (the dangerous one — would silence dropped-Result warnings
# in transaction commit paths) was removed entirely; CI stays green without
# it, so the safer posture holds.
#
# The remaining four are retained as bare `"allow"` because the `reason =`
# key is not accepted on `[workspace.lints.rust]` entries in current cargo;
# the justification lives in these comments instead.
#
# - unused_imports: Phase-1 R3 test fixtures keep scoped imports across
#   cfg-gated variant helpers. Lib-code unused imports are fixed site-local.
#   Phase-2 sweep after evaluator completion re-audits.
# - dead_code: R3 test fixtures include helper functions (e.g.
#   `system_labeled_node`, `concrete_scope`) gated on cfg features. Library
#   dead_code is fixed site-local; lint stays relaxed workspace-wide until
#   the test-only helper set stabilises.
# - unused_variables: R3 tests bind fixture results (`let root = sb.read(...)`)
#   for diagnostic breakpoint use; renaming to `_root` loses breakpoint-name
#   symmetry with the rest of the test. Phase-2 migrates to `dbg!`.
# - non_snake_case: R3 `ucan_stub_messages.rs` uses uppercase routing-token
#   names (`ON_ERROR`, `ON_DENIED`) inside test-function identifiers to keep
#   the routing contract visible in the test name.
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"
non_snake_case = "allow"

[workspace.lints.clippy]
# Start strict and relax only where justified.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `todo` is the load-bearing R3-stub pattern; lib stubs use `todo!()`. The
# real R5 implementation removes them. Workspace-wide allow so `-D warnings`
# at clippy time stays clean during the red phase.
todo = "allow"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "allow"
expect_used = "allow"

# R6 pedantic allow-list — bp-1 prune (down from 95 entries to the genuine
# Phase-1-scope compromises). Every remaining entry has a load-bearing reason;
# an unqualified `allow` is a regression signal. Tighten further in Phase 2.

# Structural / style relaxations kept deliberately ------------------------
# Benten exports many `SubgraphSpec`, `SubgraphBuilder`, etc. — the crate
# namespacing makes repetition unavoidable for discoverability.
module_name_repetitions = "allow"
# MUST_USE sweep deferred with the Phase-2 doc sweep — tying tags to items
# churns public surface at the same moment we're expanding it.
must_use_candidate = "allow"
# `# Errors` doc sweep deferred with the Phase-2 missing_docs allow on eval /
# engine; see crate-root allow reasons there.
missing_errors_doc = "allow"
# Phase-1 panic docs land with the Phase-2 missing_docs sweep (same reason).
missing_panics_doc = "allow"
# Several state-struct builders carry many bool flags during Phase-1
# bring-up (EngineBuilder production/without_ivm/without_caps/without_versioning).
# Refactor to a bitset lands in Phase 2 with the capability-mode consolidation.
struct_excessive_bools = "allow"
# Phase-1 doc prose deliberately treats `Benten`, `R5`, `IVM`, etc. as
# non-backticked proper nouns in module prose; backticking all of them is
# cosmetic churn with no reader benefit.
doc_markdown = "allow"
# Phase-2b R3-FP test scaffolding contains many `//!` doc comments where
# clippy 1.95 (stable) reads `+ ` / `- ` mid-line as markdown bullet
# continuations and demands per-line indentation. These doc comments are
# placeholder narrative R5 implementers will rewrite; suppress the lint
# workspace-wide so CI stays green during the red phase. Phase-2c can
# tighten per-file once primitive surfaces stabilise.
doc_lazy_continuation = "allow"
# Implicit-Default stubs are intentional during Phase-1 bring-up; Phase-2
# tightens per-type as each surface stabilises.
new_without_default = "allow"

# Phase-1 stub + numeric tolerance --------------------------------------
# Phase-1 code does u64<->i64<->usize narrowing in ID math and iterate
# counters; Phase-2 re-types these once the budget model solidifies.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"

# R3 red-phase residuals ------------------------------------------------
# The R3 `#[allow(...)]`-with-reason attributes trip `allow_attributes`
# (the Rust 2024 stricter form); the reasons are present. Enabling this
# lint surfaces false positives on the very reasons we're documenting.
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
# `unused_self` trips on Phase-1 stubs that take `&self` to pin the
# forward-compatible trait shape (Phase-2 implementations use self).
unused_self = "allow"
# R3 test files use `.unwrap()` inside closures wrapped by `.ok_or_else` so
# the unused-wrap fires on intentionally-panicking fixtures.
unnecessary_wraps = "allow"
# Phase-1 carries ~25 scoped helper imports inside functions (nested-tx,
# IVM subscriber bring-up). Phase-2 factors them out as the surfaces stabilise.
items_after_statements = "allow"
# ErrorCode::from_str and Cid::from_str predate the FromStr trait
# impl (Cid variant explicitly deferred to Phase 2). Swapping the
# signature to `FromStr::from_str` is a breaking change for downstream
# consumers we'd rather make once in Phase 2, not twice.
should_implement_trait = "allow"
# ErrorCode::from_str has two arms with identical `CidParse` bodies for
# two string spellings ("E_CID_PARSE" + historic "E_CID_INVALID"). The
# duplication documents the alias path; merging hides the compat
# contract.
match_same_arms = "allow"
# Several error-map closures in {graph,engine}_transaction pass the
# inner error through unchanged; fixing collapses `.map_err(|e| e.into())`
# into `.map_err(Into::into)` which is less searchable. Phase-2 does the
# sweep when error chains stabilise.
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
# Phase-1 explicit `.iter()` on fixed-size collections reads clearer to
# new contributors than the implicit ref-deref desugar; tightened in
# Phase-2 once contributor onboarding finishes.
explicit_iter_loop = "allow"
# Several `impl Default` blocks match the derive output but the derive
# fails when the crate lacks the `Default` derive on a nested type (e.g.
# `Arc<Mutex<...>>` hand-init). Keeping explicit impls until the nested
# types stabilise.
derivable_impls = "allow"
# Lifetime elision reads clearly in the signatures where it's explicitly
# written; removing ranges from the elision lint on a per-signature basis
# trips for Phase-1 arch documentation reasons. Phase-2 re-evaluates.
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
# R6 W2 split introduced several `&Cid` parameters where the receiver
# accepts a ref, making one-deref paths flag. Fix lands in Phase-2 alongside
# the Cid newtype audit.
needless_borrow = "allow"
# `BTreeSet::default()` vs `BTreeSet::new()` is stylistic; Phase-1 tests use
# whichever matches the surrounding type.
default_trait_access = "allow"
# Proptest shrinks introduce binding names that differ only by a single
# character (`a`/`b`/`aa`/`ab`) — deliberate to keep the test readable.
similar_names = "allow"
# benten-core value tests use literal 3.14 (NOT approx PI — we're testing
# float canonicalization, not math constants). Backticking trips the lint.
approx_constant = "allow"
# `.to_string()` on `&String` pattern appears in tests that move a value
# through a borrowed context; fixing churns test readability.
inefficient_to_string = "allow"
# Test literals use raw digit strings for CID / seq-num fixtures where the
# separator would obscure the on-wire value the assertion is pinning.
unreadable_literal = "allow"
# Proptest strategy closures use `|s| s.to_string()` to coerce
# `&str`→`String`; the equivalent `str::to_owned` requires an import
# per-test. Phase-2 adds a shared `str_to_owned` helper.
implicit_clone = "allow"
needless_pass_by_value = "allow"
# `let Foo(x) = y else { return }` is cleaner in isolation, but Phase-1
# error paths carry multi-line context in the else branch that reads
# worse as a let-else. Phase-2 migrates site-by-site once the control-
# flow shape is final.
manual_let_else = "allow"
# Single-arm destructuring via match keeps the error path inline with
# the happy path for readability in Phase-1. `if let` equivalent is
# adopted in Phase-2 sweep.
single_match = "allow"
single_match_else = "allow"
# Test fixtures return `&'a str` literals from helpers where the lifetime
# elision is deliberate for call-site brevity; Phase-2 refactors via
# `&'static` once the fixture set stabilises.
unnecessary_literal_bound = "allow"
# `1..=n` is more readable than `1..n+1` in tests that walk a budget —
# the range-plus-one rewrite obscures the off-by-one contract.
range_plus_one = "allow"
# Format args are deliberately passed positionally in error-path paths
# where the arg name contains `_` and inlining hurts readability. Phase-2
# sweep migrates to inline args after all error types stabilise.
uninlined_format_args = "allow"
# Doc link with backticks (`[foo]()`) is intentional for type names that
# shadow module names (`Cid` vs `cid` module).
doc_link_with_quotes = "allow"
# `.register_subgraph(&spec)` vs `.register_subgraph(spec)` — the
# explicit borrow reads better against the `&handler_id` assignment
# pattern in the same tests.
needless_borrows_for_generic_args = "allow"
# `.split(":")` vs `.split(':')` — the string form is consistent with
# other test-string operations where the char form isn't applicable.
single_char_pattern = "allow"
# Byte-slice literals (`b"..."`) vs `.as_bytes()` — tests that assert
# against readable ASCII use the str form for diff-readability.
byte_char_slices = "allow"
# Test fixtures set fields on a `Foo::default()` via `.field = x` for a
# linear, grep-friendly setup; wrapping every fixture in a builder is
# out-of-scope for the Phase-1 cleanup.
field_reassign_with_default = "allow"

[workspace.dependencies]
# Internal workspace crates
benten-errors = { path = "crates/benten-errors" }

# Core engine
blake3 = { version = "1.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
serde_json = "1"
serde_ipld_dagcbor = "0.6.4"
multihash = "0.19"
redb = "4"

# Concurrency & allocator
papaya = "0.2"
mimalloc = { version = "0.1", default-features = false }

# Error handling & observability
thiserror = "2"
tracing = "0.1"

# Lightweight no_std spinlock + lazy-init primitive. benten-core uses this to
# serialize access to the process-wide version-chain anchor tables (Phase 1
# in-process only; Phase 3 replaces with CRDT merge). Chosen over `once_cell`
# because `spin` needs no feature flags for no_std+alloc.
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }

# Dev
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"
tempfile = "3"

# Bindings (napi-rs v3 handles native + WASM)
napi = { version = "3", default-features = false }
napi-derive = "3"

# HLC time source — pulled forward to Phase 1 per R2 gap #2 resolution.
# `crud('post')` zero-config path injects a deterministic `createdAt` timestamp
# on WRITE, and `createdAt` enters the Node content-hash input. A plain
# wall-clock source would break D2 cross-process determinism and force a
# per-Anchor counter hack for Phase 1 that gets thrown away at Phase 3. One
# HLC implementation for all phases is cleaner.
uhlc = "0.2"

# Phase 2b (SANDBOX / WASM compute) — reserved versions for future use.
# No production crate consumes wasmtime today; it activates with the G7
# SANDBOX host + Inv-4 / Inv-7 wiring. Keeping the version pin commented
# here parallels the Phase-3 reservation discipline below so the workspace
# manifest documents intended versions without dragging the build graph.
# wasmtime = "35"

# Phase 3 (sync/identity) — reserved versions for future use:
# iroh = "0.97"
# loro = "1"
# ed25519-dalek = "2"

# Historical dependency note: in Phase 1 the `core2` 0.4.0 crate was archived
# upstream on 2026-04-14 ("No longer supported. Use core directly.") and
# yanked from crates.io. It was pulled in transitively via two chains through
# `cid` and `multihash`. We maintained a temporary fork (BentenAI/rust-cid
# at rev e11cf45) and a pinned technocreatives core2 fork to unblock the spike.
#
# Both upstream PRs have since merged and released:
#   - multiformats/rust-cid#185       → cid 0.11.2 (no_std_io2 replacement)
#   - multiformats/rust-multihash#407 → multihash 0.19.4 (no_std_io2 replacement)
#
# The forks are no longer needed; crates.io versions carry the fix. Closes
# docs/future/phase-2-backlog.md §6.4.

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 2
