[package]
name = "benten-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js bindings for the Benten graph engine via napi-rs v3."

[lints]
workspace = true

[lib]
# `cdylib` for the napi dynamic lib; `rlib` so the in-process integration
# test `tests/input_validation.rs` can link against the `benten_napi::testing`
# surface. The `napi-export` feature gates the napi-rs symbols so the
# rlib used by the test binary doesn't reference unresolved napi externs.
crate-type = ["cdylib", "rlib"]
# Disable the implicit libtest bench harness. `cargo bench --workspace`
# passes criterion CLI flags (`--measurement-time`, `--sample-size`) that
# libtest rejects with `Unrecognized option`. benten-napi has no benches of
# its own — opting out of the implicit bench target fixes the bench.yml run.
# Mirrors the identical fix in crates/benten-core/Cargo.toml.
bench = false

[features]
default = ["napi-export"]
# Test-only feature used by the in-process integration test.
in-process-test = []
# When "napi-export" is enabled (default for the cdylib build), the crate
# pulls napi-rs and exports the `#[napi]` surface. Disabling the feature
# yields a pure-Rust rlib that the in-process integration test can link
# against without resolving napi extern symbols.
napi-export = ["dep:napi", "dep:napi-derive"]

[dependencies]
benten-core = { path = "../../crates/benten-core" }
benten-caps = { path = "../../crates/benten-caps" }
# Phase 2a G11-A Wave 3a napi F5: the WAIT suspend/resume bridge (the
# in-memory `ENVELOPE_CACHE` that `suspend_to_bytes` /
# `resume_from_bytes*` round-trip through) must be live in the cdylib
# the scaffolder + index.test.ts consume. Phase 2b lands a redb-backed
# envelope store; until then the in-memory cache is the only thing that
# makes `callWithSuspension` -> `resumeFromBytes*` work across the napi
# boundary.
#
# R6 fix-pass A2: opt into the narrow `envelope-cache-test-grade`
# feature instead of the broader `test-helpers`. Prior to the split the
# cdylib pulled the full `test-helpers` surface
# (`testing_force_reregister_with_different_cid`,
# `testing_audit_sequence`, `testing_insert_privileged_fixture`, …)
# which is reachable in production napi consumers' processes. The
# narrow feature gates ONLY the ENVELOPE_CACHE static + cache_put /
# cache_get; nothing else from the test-only API surface lands in the
# cdylib.
benten-engine = { path = "../../crates/benten-engine", features = ["envelope-cache-test-grade", "iteration-budget-test-grade"] }
benten-errors = { workspace = true }
# r6b-dx-C5: used by `parse_actor_cid_or_derive` to hash friendly
# principal strings into deterministic synthetic CIDs. Same version the
# engine crates use for content hashing.
blake3 = { workspace = true }
napi = { workspace = true, features = ["napi4", "serde-json"], optional = true }
napi-derive = { workspace = true, optional = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

[[test]]
name = "input_validation"
# Requires the in-process feature so the test only runs in builds that
# explicitly opt into the rlib + non-napi-export configuration. By default
# `cargo test --workspace` still compiles the rlib with napi-export ON
# (which fails to link the test binary). Use:
#     cargo test -p benten-napi --no-default-features --features in-process-test
# to run this test. Until then it is excluded from the default test run.
required-features = ["in-process-test"]
