[package]
name = "benten-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js bindings for the Benten graph engine via napi-rs v3."

[lints]
workspace = true

[lib]
# `cdylib` for the napi dynamic lib; `rlib` so the in-process integration
# test `tests/input_validation.rs` can link against the `benten_napi::testing`
# surface. The `napi-export` feature gates the napi-rs symbols so the
# rlib used by the test binary doesn't reference unresolved napi externs.
crate-type = ["cdylib", "rlib"]
# Disable the implicit libtest bench harness. `cargo bench --workspace`
# passes criterion CLI flags (`--measurement-time`, `--sample-size`) that
# libtest rejects with `Unrecognized option`. benten-napi has no benches of
# its own — opting out of the implicit bench target fixes the bench.yml run.
# Mirrors the identical fix in crates/benten-core/Cargo.toml.
bench = false

[features]
default = ["napi-export"]
# Test-only feature used by the in-process integration test.
in-process-test = []
# When "napi-export" is enabled (default for the cdylib build), the crate
# pulls napi-rs and exports the `#[napi]` surface. Disabling the feature
# yields a pure-Rust rlib that the in-process integration test can link
# against without resolving napi extern symbols.
napi-export = ["dep:napi", "dep:napi-derive"]
# Phase 2b G6-B (ts-r4-2): light up the cfg-gated
# `engine.testingOpenStreamForTest` factory + the underlying
# `benten_engine::testing_open_stream_for_test` helper. The napi
# `Engine` impl method is wrapped in `cfg(any(test, feature =
# "test-helpers"))` so the production cdylib does NOT compile this
# surface in. Vitest fixtures opt into this feature explicitly when
# building the test artifact (`napi build --features test-helpers`).
test-helpers = ["benten-engine/test-helpers"]
# Phase 2b G10-A-browser: browser-target marker feature.
#
# napi-rs v3 supports `wasm32-unknown-unknown` automatically via the
# `napi3` ABI feature already pulled by `napi = { features = ["napi4"] }`
# above — no extra dep / feature flip is required at the crate boundary.
# This feature exists as a documentation marker so a downstream consumer
# building the browser bundle (`wasm-browser.yml`) can opt into any
# future browser-only behaviour (e.g. wasm-bindgen integration if we
# ever adopt one) without disturbing the default cdylib build.
#
# Compromise #N+8 enforcement (in-memory manifest store only — no
# IndexedDB) is the responsibility of `src/wasm_browser.rs`'s storage
# contract, not this feature flag; the flag does NOT toggle persistence
# behaviour. Per the load-bearing rule documented in `wasm_browser.rs`,
# every `BrowserManifestStore::new()` returns a non-persistent store
# regardless of compile-time configuration in Phase 2b.
browser-target = []

[dependencies]
benten-core = { path = "../../crates/benten-core" }
benten-caps = { path = "../../crates/benten-caps" }
# Phase-2b G12-E (2026-04-27): the test-grade `envelope-cache-test-grade`
# feature is RETIRED. WAIT envelope persistence now flows through the
# durable `benten_eval::SuspensionStore` (default impl
# `RedbSuspensionStore`) that every Engine instance constructs at build
# time. The cdylib no longer has to opt in to a test-only static to
# light up `suspend_to_bytes` / `resume_from_bytes*` — the production
# path IS the durable path. `iteration-budget-test-grade` stays — that
# feature is unrelated (G12-A budget override).
benten-engine = { path = "../../crates/benten-engine", features = ["iteration-budget-test-grade"] }
benten-errors = { workspace = true }
# Phase 2b G8-B: needed for `Strategy` enum parsing in `parse_user_view_spec`
# (the `engine.createUserView({ strategy })` napi entry point). The Strategy
# enum is a public re-export of `benten_ivm::Strategy` via benten-engine; we
# depend directly so the napi binding's parser can name the enum without
# pulling a benten-engine re-export shim.
benten-ivm = { path = "../../crates/benten-ivm" }
# r6b-dx-C5: used by `parse_actor_cid_or_derive` to hash friendly
# principal strings into deterministic synthetic CIDs. Same version the
# engine crates use for content hashing.
blake3 = { workspace = true }
napi = { workspace = true, features = ["napi4", "serde-json"], optional = true }
napi-derive = { workspace = true, optional = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

[[test]]
name = "input_validation"
# Requires the in-process feature so the test only runs in builds that
# explicitly opt into the rlib + non-napi-export configuration. By default
# `cargo test --workspace` still compiles the rlib with napi-export ON
# (which fails to link the test binary). Use:
#     cargo test -p benten-napi --no-default-features --features in-process-test
# to run this test. Until then it is excluded from the default test run.
required-features = ["in-process-test"]

# Phase 2b G10-A-browser must-pass tests. Each requires the same
# `in-process-test` rlib build mode `input_validation` uses — the napi
# cdylib externs don't resolve when libtest links the test binary, so
# every integration test under bindings/napi/tests/ ships with the
# same required-features gate.
#
# Run with:
#   cargo test -p benten-napi --no-default-features \
#     --features in-process-test \
#     --test wasm32_unknown_unknown_browser_engine_loads \
#     --test wasm32_unknown_unknown_module_manifest_in_memory_only_no_indexeddb_persistence \
#     --test wasm32_unknown_unknown_bundle_size_under_threshold
[[test]]
name = "wasm32_unknown_unknown_browser_engine_loads"
required-features = ["in-process-test"]

[[test]]
name = "wasm32_unknown_unknown_module_manifest_in_memory_only_no_indexeddb_persistence"
required-features = ["in-process-test"]

[[test]]
name = "wasm32_unknown_unknown_bundle_size_under_threshold"
required-features = ["in-process-test"]
