[package]
name = "benten-caps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Capability policy hook + NoAuthBackend for the Benten graph engine (Phase 1 stub)."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
thiserror = { workspace = true }
# G14-B durable UCAN backend (wave-4b): consumes the UCAN envelope +
# chain-walk + DeviceRevocation surfaces from `benten-id` (G14-A1 +
# G14-A2). Per CLAUDE.md baked-in #17, benten-caps is a full-peer
# concern — capability work does NOT cross into the wasm32 thin-client
# bundle, so this dep does not need cfg-gating against
# `target_arch = "wasm32"`.
benten-id = { path = "../benten-id" }
# G14-B: GraphBackend umbrella trait (G13-A) — the durable UCAN
# backend is generic over `B: GraphBackend` per arch-r1-1 /
# D-PHASE-3-1. KV-keyed grant + revocation persistence rides on the
# inherited `KVBackend` surface.
benten-graph = { path = "../benten-graph" }
# G14-B: BLAKE3 for UCAN envelope content-CID computation, matching
# the engine's existing content-address scheme (Node CIDs, Edge CIDs).
blake3 = { workspace = true }
# G14-B: DAG-CBOR encode/decode for durable UCAN envelopes +
# DeviceRevocation entries (matches the workspace canonical-bytes
# discipline).
serde_ipld_dagcbor = { workspace = true }
# G14-B: constant-time byte comparison surface per crypto-major-4.
# Already used transitively via benten-id; the explicit dep here
# pins the same minor version at this layer for any future cap-side
# security-decision compares (see r1-cap-2 brief carry-forward).
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
# G14-B: benten-graph promoted to non-dev dep above; redb-backed
# integration tests still consume the same dep. The earlier note
# explaining this dep's dev-only status no longer applies.
#
# Integration tests cross layers; see `check_write_called_at_commit.rs` and
# `toctou_iteration.rs`. dev-deps cycle between benten-caps and benten-engine
# is safe because test binaries link separately from the lib crate graph.
#
# G11-A Wave 2a: `features = ["test-helpers"]` because the
# `test-helpers` default was flipped off on benten-engine; the helpers
# stay available for these integration tests under the explicit opt-in.
benten-engine = { path = "../benten-engine", features = ["test-helpers"] }

[[bench]]
name = "wallclock_toctou_refresh"
harness = false
